<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/newMeeting">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/topicInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/meeting_topic"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/topicEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dateInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:hint="@string/meeting_date"
                app:endIconMode="clear_text"
                app:layout_constraintStart_toStartOf="@+id/topicInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/topicInputLayout"
                app:startIconDrawable="@drawable/ic_today">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dateEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:textSize="@dimen/text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/timeInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/meeting_time"
                app:endIconMode="clear_text"
                app:layout_constraintBottom_toBottomOf="@+id/dateInputLayout"
                app:layout_constraintEnd_toEndOf="@+id/topicInputLayout"
                app:startIconDrawable="@drawable/ic_access_time">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/timeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:textSize="@dimen/text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/roomsSpinner"
                android:textSize="@dimen/text_size"
                app:layout_constraintBottom_toBottomOf="@+id/roomsSpinner"
                app:layout_constraintStart_toStartOf="@+id/topicInputLayout"
                app:layout_constraintTop_toTopOf="@+id/roomsSpinner" />

            <Spinner
                android:id="@+id/roomsSpinner"
                android:layout_width="175dp"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                app:layout_constraintEnd_toEndOf="@+id/topicInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/timeInputLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/meeting_email"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toStartOf="@+id/add_email_btn"
                app:layout_constraintStart_toStartOf="@+id/topicInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/roomsSpinner"
                app:startIconDrawable="@drawable/ic_mail_outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/add_email_btn"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@null"
                android:contentDescription="@string/add_email_btn"
                app:layout_constraintBottom_toBottomOf="@+id/emailInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/emailInputLayout"
                app:srcCompat="@drawable/ic_add_circle" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/emailGrp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/emailInputLayout">

            </com.google.android.material.chip.ChipGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>