<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_ok"
        android:orderInCategory="100"
        android:title="@string/action_filters"
        android:icon="@drawable/ic_check"
        app:showAsAction="ifRoom" />

</menu>